# 3D-snake

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  setup.sh
src/: main.c  settings.h  state.h
src/gfx/: buffer.c  buffer.h  camera.c  camera.h  cube.h  shader.c  shader.h  vao.c  vao.h  window.c  window.h
src/shaders/: solid-color.fs  solid-color.vs
src/world/: apple.c  apple.h  floor.c  floor.h  snake.c  snake.h
